--- a/src/components/css/Weekdisplay.scss
+++ b/src/components/css/Weekdisplay.scss
@@ -2,11 +2,94 @@
     max-width: 100%;
     max-height: 100%;
     display: flex;
+    flex-direction: column;
     // background-color:  red;
     justify-content:center;
     align-items: center;
+
     h1{
         font-family: "Nunito", sans-serif;
         font-weight: 900;
     }
+    table, th, td {
+        font-family: "Nunito", sans-serif
+    }
+
+    .WeekDisplayTable{
+        width: 100vw;
+    }
+    .WeekCol{
+        width: 100px;
+        padding: 0.5rem;
+        border: 1.5px solid white;
+        border-radius: 10px;
+        font-size: 2rem
+    }
+    .WorksheetColContainer{
+        padding: 0.5rem;
+        border: 1.5px solid white;
+        border-radius: 10px;
+    }
+    .WorksheetColWrapper{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    // great" | "good" | "ok" | "bad" | "horrible" | "not_done
+
+    .Na{
+        background: repeating-linear-gradient(
+            45deg,
+            #023145,
+            #023145 10px,
+            #011923 10px,
+            #011923 20px
+        );
+    }
+
+}
+
+.UpdateStatusOverlay{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    flex-direction: column;
+    background: rgba(121, 121, 121, 0.2);
+    box-shadow: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    align-items: center;
+    justify-content: baseline;
+
+    .StatusOptionsContainer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1{
+            margin: 0.25rem;
+            padding: 0.5rem;
+            border: 0.25rem solid white;
+            border-radius: 20px;
+            cursor: pointer;
+        }
+    }
+}
+
+.great{
+        background-color: #319C65;
+}
+.good{
+    background-color: #1E5E32;
+}
+.ok{
+    background-color: #CD7F01;
+}
+.bad{
+    background-color: #CC0029;
+}
+.horrible{
+    background-color: #530011;
 }
