--- a/src/components/css/General.css
+++ b/src/components/css/General.css
@@ -77,4 +77,9 @@ button {
 }
 #SignupContainer .TextField {
   margin: 10px;
+}
+
+.MuiInputBase-input {
+  border-radius: 20px !important;
+  background-color: white !important;
 }/*# sourceMappingURL=General.css.map */
