--- a/src/components/css/General.scss
+++ b/src/components/css/General.scss
@@ -83,3 +83,8 @@ button{
         margin: 10px;
     }
 }
+
+.MuiInputBase-input{
+    border-radius: 20px !important;
+    background-color: white !important;
+}
